feat(receipt): implement create func
